<resources>
    <string name="app_name">JJ01_1</string>
    <string name="bet">BET</string>
    <string name="bet1">BET 1</string>
    <string name="bet2">BET 2</string>
    <string name="choose_names">CHOOSE NAMES OF LESS THAN 7 LETTERS</string>
    <string name="eight_hundred">800</string>
    <string name="enter">ENTER</string>
    <string name="last">FINAL</string>
    <string name="four_hundred">400</string>
    <string name="game">%1$s GAME SCORE</string>
    <string name="one_thousand">1000</string>
    <string name="player1">PLAYER 1</string>
    <string name="player2">PLAYER 2</string>
    <string name="player1game">PLAYER 1 GAME SCORE</string>
    <string name="player2game">PLAYER 2 GAME SCORE</string>
    <string name="playerright">RIGHT</string>
    <string name="player1total">PLAYER 1 TOTAL SCORE</string>
    <string name="player2total">PLAYER 2 TOTAL SCORE</string>
    <string name="record">RECORD</string>
    <string name="right">%1$s RIGHT</string>
    <string name="six_hundred">600</string>
    <string name="sixteen_hundred">1600</string>
    <string name="ties">TIES</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_run_double">runDouble</string>
    <string name="title_activity_final">activityFinal</string>
    <string name="total">%1$s TOTAL SCORE</string>
    <string name="twelve_hundred">1200</string>
    <string name="two_hundred">200</string>
    <string name="two_thousand">2000</string>
    <string name="wins">WINS</string>
    <string name="wrong">%1$s WRONG</string>
    <string name="zero">0</string>
</resources>
