<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context=".activityDailyLimited"
    >

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/enter"
        android:textStyle="bold"
        android:onClick="buttonDoneOnClick"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Bet1"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:hint="0"
        tools:ignore="LabelFor"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Bet2"
        android:layout_width="162dp"
        android:layout_height="59dp"
        android:layout_marginEnd="28dp"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bet1Name"
        android:hint="@string/zero"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Bet1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/bet1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/Bet2Name"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/bet2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>